flux/apps/donetick/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: donetick
  namespace: default
spec:
  selector: { app: donetick }
  ports:
    - port: 2021
      targetPort: 2021
