flux/apps/donetick/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: donetick
  namespace: default
  annotations:
    tailscale.com/hostname: donetick
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: donetick
      port:
        number: 2021
  tls:
    - hosts: [donetick]
