flux/apps/donetick/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: donetick
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: donetick
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: tailscale
      ports:
        - port: 2021
          protocol: TCP
